# CppMidiProcessor

./: .gitignore  AudioTrackSwitchEditor.cpp  AudioTrackSwitchEditor.h  BassStyleEditorDialog.cpp  BassStyleEditorDialog.h  CMakeLists.txt  GrooveLabWindow.cpp  GrooveLabWindow.h  LibraryWindow.cpp  LibraryWindow.h  NoteMonitorWidget.cpp  NoteMonitorWidget.h  PianoStyleEditorDialog.cpp  PianoStyleEditorDialog.h  PitchColor.h  PitchMonitorWidget.cpp  PitchMonitorWidget.h  PresetData.h  PresetLoader.cpp  PresetLoader.h  RtMidi.cpp  RtMidi.h  SilentPlaybackEngine.cpp  SilentPlaybackEngine.h  SnappingWindow.cpp  SnappingWindow.h  Startup.scpt  Startup_master.scpt  VirtuosoPresetInspectorWindow.cpp  VirtuosoPresetInspectorWindow.h  VirtuosoVocabularyWindow.cpp  VirtuosoVocabularyWindow.h  WaveVisualizer.cpp  WaveVisualizer.h  main.cpp  mainwindow.cpp  mainwindow.h  midiprocessor.cpp  midiprocessor.h  preset.xml  (+5 more)
.cache/clangd/index/: AgentCoordinator.cpp.93A637C274C42287.idx  AgentCoordinator.h.C8AC839C6F17BBFC.idx  AmpleBassUprightMapping.cpp.C5DBFD329970A386.idx  AmpleBassUprightMapping.h.27E2DDBB4EAF061A.idx  AutoWeightController.cpp.6EAB0ADB6BFAAC57.idx  AutoWeightController.h.F42072915F6578B5.idx  BalladReferenceTuning.cpp.9C8A4038DCFE0995.idx  BalladReferenceTuning.h.71BDDD88F43661C7.idx  BandPlaybackEngine.cpp.AEA2A1CEB1C082AD.idx  BandPlaybackEngine.h.B5DF232D29160531.idx  BassDriver.cpp.E96533680D14EA9F.idx  BassDriver.h.4E4DB7AB3547617A.idx  BassPresets.cpp.42D25C575DCA48B5.idx  BassPresets.h.F2C3072C50137DF8.idx  BassProfile.cpp.545F67D77D0B17E2.idx  BassProfile.h.4EAB3CAF1F9B2543.idx  BassStyleEditorDialog.cpp.9799A9DE48408395.idx  BassStyleEditorDialog.h.7BE0ACCF0B0FAEDA.idx  BeatCostModel.cpp.B2CE9E85ECBB5FB7.idx  BeatCostModel.h.DA4364E833473C4A.idx  BrushesBalladDrummer.cpp.2F90CFB7D081DB86.idx  (+171 more)
Startup.app/Contents/: Info.plist
VocalSyncAU/: CMakeLists.txt
VocalSyncAU/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PsolaProcessor.h  YinPitchDetector.h
build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
build-asan/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-asan/CppMidiProcessor_autogen/: deps  moc_predefs.h
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  VirtuosoCoreTests  VirtuosoPlaybackTests  cmake_install.cmake
build-cmake/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-cmake/CppMidiProcessor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-cmake/VirtuosoCoreTests_autogen/: deps  moc_predefs.h
build-cmake/VirtuosoCore_autogen/: deps  mocs_compilation.cpp
build-cmake/VirtuosoPlaybackTests_autogen/: deps
chart/: ChartModel.h  IRealProgressionParser.cpp  IRealProgressionParser.h  SongChartWidget.cpp  SongChartWidget.h
ireal/: HtmlPlaylistParser.cpp  HtmlPlaylistParser.h  IRealHtmlPlaylistParser.h  IRealTypes.h  IRealbCodec.cpp  IRealbCodec.h
music/: BassPresets.cpp  BassPresets.h  BassProfile.cpp  BassProfile.h  ChordDictionary.cpp  ChordDictionary.h  ChordSymbol.cpp  ChordSymbol.h  JazzPianoGenerator.cpp  JazzPianoGenerator.h  PianoPresets.cpp  PianoPresets.h  PianoProfile.cpp  PianoProfile.h  Pitch.cpp  Pitch.h  ScaleLibrary.cpp  ScaleLibrary.h  SelfTest.cpp  SelfTest.h  WalkingBassGenerator.cpp  WalkingBassGenerator.h
playback/: AgentCoordinator.cpp  AgentCoordinator.h  AutoWeightController.cpp  AutoWeightController.h  BalladReferenceTuning.cpp  BalladReferenceTuning.h  BandPlaybackEngine.cpp  BandPlaybackEngine.h  BrushesBalladDrummer.cpp  BrushesBalladDrummer.h  ChordOntology.cpp  ChordOntology.h  ChordScaleTable.cpp  ChordScaleTable.h  GlissandoProcessor.h  HarmonyContext.cpp  HarmonyContext.h  HarmonyGenerator.h  HarmonyTypes.h  HarmonyVoiceManager.cpp  InteractionContext.cpp  InteractionContext.h  JazzBalladBassPlanner.cpp  JazzBalladBassPlanner.h  JazzBalladPianoPlanner.cpp  JazzBalladPianoPlanner.h  JointCandidateModel.cpp  JointCandidateModel.h  JointPhrasePlanner.cpp  JointPhrasePlanner.h  KeyAnalyzer.cpp  KeyAnalyzer.h  LhVoicingGenerator.cpp  LhVoicingGenerator.h  LookaheadPlanner.cpp  LookaheadPlanner.h  LookaheadWindow.cpp  LookaheadWindow.h  PianoGestures.cpp  PianoGestures.h  (+25 more)
playback/tests/: VirtuosoPlaybackTests.cpp
preset.logicx/Resources/: ProjectInformation.plist
preset_master.logicx/Resources/: ProjectInformation.plist
preset_onoff.logicx/Resources/: ProjectInformation.plist
virtuoso/bass/: AmpleBassUprightMapping.cpp  AmpleBassUprightMapping.h  AmpleBassUprightMapping.json
virtuoso/constraints/: BassDriver.cpp  BassDriver.h  ConstraintsTypes.h  DrumDriver.cpp  DrumDriver.h  IInstrumentDriver.h  PianoDriver.cpp  PianoDriver.h
virtuoso/control/: PerformanceWeightsV2.cpp  PerformanceWeightsV2.h  VirtuosityMatrix.h
virtuoso/drums/: FluffyAudioJazzDrumsBrushesMapping.cpp  FluffyAudioJazzDrumsBrushesMapping.h  FluffyAudioJazzDrumsBrushesMapping.json
virtuoso/engine/: VirtuosoClock.h  VirtuosoEngine.cpp  VirtuosoEngine.h  VirtuosoScheduler.cpp  VirtuosoScheduler.h
virtuoso/groove/: FeelTemplate.h  GrooveGrid.h  GrooveRegistry.cpp  GrooveRegistry.h  GrooveTemplate.cpp  GrooveTemplate.h  TimingHumanizer.h
virtuoso/memory/: MotifTransform.cpp  MotifTransform.h  MotivicMemory.cpp  MotivicMemory.h
virtuoso/ontology/: OntologyRegistry.cpp  OntologyRegistry.h
virtuoso/piano/: PianoPerformanceModel.cpp  PianoPerformanceModel.h  PianoPerformancePlan.h
virtuoso/solver/: BeatCostModel.cpp  BeatCostModel.h  CspSolver.h
virtuoso/tests/: VirtuosoCoreTests.cpp
virtuoso/theory/: FunctionalHarmony.cpp  FunctionalHarmony.h  GrooveEngine.cpp  GrooveEngine.h  NegativeHarmony.cpp  NegativeHarmony.h  PatternLibrary.cpp  PatternLibrary.h  ScaleSuggester.cpp  ScaleSuggester.h  TheoryEvent.cpp  TheoryEvent.h
virtuoso/ui/: GrooveTimelineWidget.cpp  GrooveTimelineWidget.h  GuitarFretboardWidget.cpp  GuitarFretboardWidget.h  PianoKeyboardWidget.cpp  PianoKeyboardWidget.h
virtuoso/util/: DeterminismPolicy.h  StableHash.h  StableRng.h
virtuoso/vocab/: VocabularyRegistry.cpp  VocabularyRegistry.h  cool_jazz_vocabulary.json
(+122 files in other folders)
